# abxpkg

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/: ci_binaries.json  ci_standard_test_shards.py  ci_test_matrix.py  ci_test_sections.sh  resolve_ci_binaries.sh
.github/workflows/: deploy-pages.yml  release.yml  tests.yml
abxpkg/: __init__.py  admin.py  base_types.py  binary.py  binary_service.py  binprovider.py  binprovider_ansible.py  binprovider_apt.py  binprovider_bash.py  binprovider_brew.py  binprovider_bun.py  binprovider_cargo.py  binprovider_chromewebstore.py  binprovider_deno.py  binprovider_docker.py  binprovider_gem.py  binprovider_goget.py  binprovider_nix.py  binprovider_npm.py  binprovider_pip.py  binprovider_playwright.py  binprovider_pnpm.py  binprovider_puppeteer.py  binprovider_pyinfra.py  binprovider_scoop.py  binprovider_uv.py  binprovider_yarn.py  chromewebstore_utils.js  cli.py  click_cli.py  config.py  fastcli.py  semver.py  windows_compat.py
abxpkg/js/base/: config.json  utils.js
abxpkg/js/chrome/: chrome_utils.js  config.json
django_example_project/: README.md
django_example_project/project/: models.py
django_example_project/project/migrations/: 0001_initial.py  0002_alter_dependency_options_dependency_min_version.py
docs/: generate.py  index.html  index.html.j2
docs/css/: base.css  components.css  tokens.css
skills/abxpkg/: SKILL.md
tests/: conftest.py  test_ansibleprovider.py  test_aptprovider.py  test_bashprovider.py  test_binary.py  test_binary_service.py  test_binary_service_apt.py  test_binprovider.py  test_brewprovider.py  test_bunprovider.py  test_cargoprovider.py  test_central_lib_dir.py  test_chromewebstoreprovider.py  test_cli.py  test_denoprovider.py  test_dockerprovider.py  test_envprovider.py  test_gemprovider.py  test_gogetprovider.py  test_install.py  test_installer_binary_contracts.py  test_module_api.py  test_nixprovider.py  test_npmprovider.py  test_pipprovider.py  test_playwrightprovider.py  test_pnpmprovider.py  test_puppeteerprovider.py  test_pyinfraprovider.py  test_security_controls.py  test_semver.py  test_uvprovider.py  test_yarnprovider.py
